# ecs-cpp

./: .gitignore  CMakeLists.txt  EntityComponentSystem.h  LICENSE  Readme.md  conanfile.txt
.github/workflows/: cmake.yml
include/: EntityComponentSystem.h
include/ecs-cpp/: EcsConcepts.h  EcsCpp.h  EcsUtil.h  EntityID.h
src/: EcsCpp.h
tests/: CMakeLists.txt  ECSTests.cpp
